.metadata/.plugins/org.eclipse.cdt.ui/potentiometer_ADC_val_01.build.log
11:39:54 **** Incremental Build of configuration Debug for project potentiometer_ADC_val_01 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:241:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  241 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:274:13: error: invalid storage class for function 'MX_GPIO_Init'
  274 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:323:1: error: expected declaration or statement at end of input
  323 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:55:13: warning: 'MX_GPIO_Init' used but never defined
   55 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:56:13: warning: 'MX_USART2_UART_Init' used but never defined
   56 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:57:13: warning: 'MX_ADC1_Init' used but never defined
   57 | static void MX_ADC1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:314:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  314 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:274:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  274 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:241:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  241 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:141:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  141 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

11:39:54 Build Failed. 4 errors, 7 warnings. (took 820ms)

